[gd_scene load_steps=5 format=2]

[ext_resource path="res://Gates/dropdown/drop_down_menu.gd" type="Script" id=1]
[ext_resource path="res://Gates/nodes/node_multiple_lines.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/black_square.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 100.5, 54.5 )

[node name="Drop_Down_Menu" type="Node2D" groups=["dropdown", "gates"]]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="out_node" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 193, 53 )

[node name="up_in_node" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( -2, 20 )

[node name="mid_in_node" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( -1, 52 )

[node name="low_in_node" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( -1, 86 )

[node name="OptionButton" type="OptionButton" parent="."]
margin_right = 170.0
margin_bottom = 107.0
rect_scale = Vector2( 1.01899, 0.928536 )

[node name="gateColor" type="ColorRect" parent="."]
visible = false
margin_left = -1.0
margin_right = 200.0
margin_bottom = 110.0
color = Color( 0, 0, 0, 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 98, 55 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 99.5, 55.5 )
shape = SubResource( 1 )

[connection signal="item_selected" from="OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="mouse_entered" from="gateColor" to="." method="_on_gateColor_mouse_entered"]
[connection signal="mouse_exited" from="gateColor" to="." method="_on_gateColor_mouse_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
